tests/suite/snapshots/suite__closure_conv__mc5_lifted_bodies.snap
---
source: tests/closure_conv.rs
expression: lifted_bodies
---
[
    Some(
        Reference {
            path: [
                "t",
            ],
            target: Param(
                BindingId(
                    1,
                ),
            ),
            ty: Primitive(
                String,
            ),
            span: IrSpan {
                span: Span {
                    start: Location {
                        offset: 143,
                        line: 6,
                        column: 57,
                    },
                    end: Location {
                        offset: 144,
                        line: 6,
                        column: 58,
                    },
                },
                file: FileId(
                    0,
                ),
            },
        },
    ),
    Some(
        BinaryOp {
            left: Reference {
                path: [
                    "x",
                ],
                target: Param(
                    BindingId(
                        1,
                    ),
                ),
                ty: Primitive(
                    I32,
                ),
                span: IrSpan {
                    span: Span {
                        start: Location {
                            offset: 74,
                            line: 3,
                            column: 21,
                        },
                        end: Location {
                            offset: 75,
                            line: 3,
                            column: 22,
                        },
                    },
                    file: FileId(
                        0,
                    ),
                },
            },
            op: Add,
            right: FieldAccess {
                object: Reference {
                    path: [
                        "__env",
                    ],
                    target: Param(
                        BindingId(
                            0,
                        ),
                    ),
                    ty: Struct(
                        StructId(
                            5,
                        ),
                    ),
                    span: IrSpan {
                        span: Span {
                            start: Location {
                                offset: 78,
                                line: 3,
                                column: 25,
                            },
                            end: Location {
                                offset: 79,
                                line: 3,
                                column: 26,
                            },
                        },
                        file: FileId(
                            0,
                        ),
                    },
                },
                field: "n",
                field_idx: FieldIdx(
                    0,
                ),
                ty: Primitive(
                    I32,
                ),
                span: IrSpan {
                    span: Span {
                        start: Location {
                            offset: 78,
                            line: 3,
                            column: 25,
                        },
                        end: Location {
                            offset: 79,
                            line: 3,
                            column: 26,
                        },
                    },
                    file: FileId(
                        0,
                    ),
                },
            },
            ty: Primitive(
                I32,
            ),
            span: IrSpan {
                span: Span {
                    start: Location {
                        offset: 74,
                        line: 3,
                        column: 21,
                    },
                    end: Location {
                        offset: 79,
                        line: 3,
                        column: 26,
                    },
                },
                file: FileId(
                    0,
                ),
            },
        },
    ),
]
