tests/suite/snapshots/suite__closure_conv__nested_closure_lift.snap
---
source: tests/closure_conv.rs
expression: "(make_curried_body, outer_lifted_body)"
---
(
    ClosureRef {
        funcref: [
            "__closure0",
        ],
        env_struct: StructInst {
            struct_id: Some(
                StructId(
                    4,
                ),
            ),
            type_args: [],
            fields: [
                (
                    "n",
                    FieldIdx(
                        0,
                    ),
                    Reference {
                        path: [
                            "n",
                        ],
                        target: Param(
                            BindingId(
                                0,
                            ),
                        ),
                        ty: Primitive(
                            I32,
                        ),
                        span: IrSpan {
                            span: Span {
                                start: Location {
                                    offset: 81,
                                    line: 3,
                                    column: 13,
                                },
                                end: Location {
                                    offset: 114,
                                    line: 3,
                                    column: 46,
                                },
                            },
                            file: FileId(
                                0,
                            ),
                        },
                    },
                ),
            ],
            ty: Struct(
                StructId(
                    4,
                ),
            ),
            span: IrSpan {
                span: Span {
                    start: Location {
                        offset: 81,
                        line: 3,
                        column: 13,
                    },
                    end: Location {
                        offset: 114,
                        line: 3,
                        column: 46,
                    },
                },
                file: FileId(
                    0,
                ),
            },
        },
        ty: Closure {
            param_tys: [
                (
                    Let,
                    Primitive(
                        I32,
                    ),
                ),
            ],
            return_ty: Closure {
                param_tys: [
                    (
                        Let,
                        Primitive(
                            I32,
                        ),
                    ),
                ],
                return_ty: Primitive(
                    I32,
                ),
            },
        },
        span: IrSpan {
            span: Span {
                start: Location {
                    offset: 81,
                    line: 3,
                    column: 13,
                },
                end: Location {
                    offset: 114,
                    line: 3,
                    column: 46,
                },
            },
            file: FileId(
                0,
            ),
        },
    },
    ClosureRef {
        funcref: [
            "__closure1",
        ],
        env_struct: StructInst {
            struct_id: Some(
                StructId(
                    5,
                ),
            ),
            type_args: [],
            fields: [
                (
                    "x",
                    FieldIdx(
                        0,
                    ),
                    Reference {
                        path: [
                            "x",
                        ],
                        target: Param(
                            BindingId(
                                1,
                            ),
                        ),
                        ty: Primitive(
                            I32,
                        ),
                        span: IrSpan {
                            span: Span {
                                start: Location {
                                    offset: 93,
                                    line: 3,
                                    column: 25,
                                },
                                end: Location {
                                    offset: 114,
                                    line: 3,
                                    column: 46,
                                },
                            },
                            file: FileId(
                                0,
                            ),
                        },
                    },
                ),
                (
                    "n",
                    FieldIdx(
                        1,
                    ),
                    FieldAccess {
                        object: Reference {
                            path: [
                                "__env",
                            ],
                            target: Param(
                                BindingId(
                                    0,
                                ),
                            ),
                            ty: Struct(
                                StructId(
                                    4,
                                ),
                            ),
                            span: IrSpan {
                                span: Span {
                                    start: Location {
                                        offset: 93,
                                        line: 3,
                                        column: 25,
                                    },
                                    end: Location {
                                        offset: 114,
                                        line: 3,
                                        column: 46,
                                    },
                                },
                                file: FileId(
                                    0,
                                ),
                            },
                        },
                        field: "n",
                        field_idx: FieldIdx(
                            0,
                        ),
                        ty: Primitive(
                            I32,
                        ),
                        span: IrSpan {
                            span: Span {
                                start: Location {
                                    offset: 93,
                                    line: 3,
                                    column: 25,
                                },
                                end: Location {
                                    offset: 114,
                                    line: 3,
                                    column: 46,
                                },
                            },
                            file: FileId(
                                0,
                            ),
                        },
                    },
                ),
            ],
            ty: Struct(
                StructId(
                    5,
                ),
            ),
            span: IrSpan {
                span: Span {
                    start: Location {
                        offset: 93,
                        line: 3,
                        column: 25,
                    },
                    end: Location {
                        offset: 114,
                        line: 3,
                        column: 46,
                    },
                },
                file: FileId(
                    0,
                ),
            },
        },
        ty: Closure {
            param_tys: [
                (
                    Let,
                    Primitive(
                        I32,
                    ),
                ),
            ],
            return_ty: Primitive(
                I32,
            ),
        },
        span: IrSpan {
            span: Span {
                start: Location {
                    offset: 93,
                    line: 3,
                    column: 25,
                },
                end: Location {
                    offset: 114,
                    line: 3,
                    column: 46,
                },
            },
            file: FileId(
                0,
            ),
        },
    },
)
